name:                NGON
version:             0.0.1
-- synopsis:            
-- description:         
homepage:            https://github.com/jhickner/ngon
license:             GPL-3
license-file:        LICENSE
author:              Jason Hickner
maintainer:          jhickner@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable NGON
  main-is:           Ngon.hs
  -- other-modules:     
  build-depends:     base >= 4.5 && < 5, 
                     filepath >= 1.3, 
                     directory >= 1.1, 
                     websockets >= 0.7, 
                     network >= 2.4, 
                     text >= 0.11, 
                     aeson >= 0.6, 
                     unordered-containers >= 0.2, 
                     vector >= 0.10, 
                     ixset >= 1.0, 
                     unix >= 2.5, 
                     transformers >=0.3, 
                     bytestring >=0.9, 
                     attoparsec >=0.10, 
                     hashable >=1.2,
                     wai >=1.4,
                     wai-extra >=1.3.4,
                     wai-websockets >=1.3.1.2,
                     warp >=1.3.8,
                     wai-app-static >=1.3.1.2,
                     http-types >=0.8,
                     conduit >=1.0.4.2
